RESOLVED FIXED88804
[CSS3 Backgrounds and Borders] Protect box-decoration-break behind a feature flag.
https://bugs.webkit.org/show_bug.cgi?id=88804
Summary [CSS3 Backgrounds and Borders] Protect box-decoration-break behind a feature ...
Alexis Menard (darktears)
Reported 2012-06-11 13:59:55 PDT
[CSS3 Backgrounds and Borders] Protect box-decoration-break behind a feature flag.
Attachments
Patch (43.43 KB, patch)
2012-06-11 14:04 PDT, Alexis Menard (darktears)
no flags
Patch for landing (42.25 KB, patch)
2012-06-11 16:33 PDT, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2012-06-11 14:04:51 PDT
WebKit Review Bot
Comment 2 2012-06-11 14:08:12 PDT
Attachment 146902 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'ChangeLog', u'Source/WebCore/ChangeLog', u..." exit_code: 1 Source/WebCore/rendering/style/StyleBoxData.cpp:77: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 1 in 27 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexis Menard (darktears)
Comment 3 2012-06-11 14:08:50 PDT
(In reply to comment #2) > Attachment 146902 [details] did not pass style-queue: > > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'ChangeLog', u'Source/WebCore/ChangeLog', u..." exit_code: 1 > Source/WebCore/rendering/style/StyleBoxData.cpp:77: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] > Total errors found: 1 in 27 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. Please ignore, we use that trick in some other files, e.g RenderStyle.cpp.
Tony Chang
Comment 4 2012-06-11 16:28:58 PDT
Comment on attachment 146902 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=146902&action=review > Source/WebCore/rendering/style/RenderStyle.h:1592 > +#if ENABLE(CSS_BOX_DECORATION_BREAK) > static EBoxDecorationBreak initialBoxDecorationBreak() { return DSLICE; } > +#endif Nit: It's OK to not guard this in an ENABLE (will get compiled out if not used). > Source/WebCore/rendering/style/RenderStyleConstants.h:106 > +#if ENABLE(CSS_BOX_DECORATION_BREAK) Nit: It's OK to not guard this in an ENABLE (doesn't take up space). > Source/WebCore/rendering/style/StyleBoxData.h:84 > bool m_hasAutoZIndex : 1; > unsigned m_boxSizing : 1; // EBoxSizing Not related to your change, but we should change m_hasAutoZIndex to unsigned to fix the packing on Windows.
Alexis Menard (darktears)
Comment 5 2012-06-11 16:33:19 PDT
Created attachment 146959 [details] Patch for landing
WebKit Review Bot
Comment 6 2012-06-11 16:38:04 PDT
Attachment 146959 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'ChangeLog', u'Source/WebCore/ChangeLog', u..." exit_code: 1 Source/WebCore/rendering/style/StyleBoxData.cpp:77: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 1 in 26 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexis Menard (darktears)
Comment 7 2012-06-11 16:44:30 PDT
(In reply to comment #4) > (From update of attachment 146902 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=146902&action=review > > > Source/WebCore/rendering/style/RenderStyle.h:1592 > > +#if ENABLE(CSS_BOX_DECORATION_BREAK) > > static EBoxDecorationBreak initialBoxDecorationBreak() { return DSLICE; } > > +#endif > > Nit: It's OK to not guard this in an ENABLE (will get compiled out if not used). > > > Source/WebCore/rendering/style/RenderStyleConstants.h:106 > > +#if ENABLE(CSS_BOX_DECORATION_BREAK) > > Nit: It's OK to not guard this in an ENABLE (doesn't take up space). > > > Source/WebCore/rendering/style/StyleBoxData.h:84 > > bool m_hasAutoZIndex : 1; > > unsigned m_boxSizing : 1; // EBoxSizing > > Not related to your change, but we should change m_hasAutoZIndex to unsigned to fix the packing on Windows. I'll make a patch for that separately :)
WebKit Review Bot
Comment 8 2012-06-11 19:21:58 PDT
Comment on attachment 146959 [details] Patch for landing Clearing flags on attachment: 146959 Committed r120029: <http://trac.webkit.org/changeset/120029>
WebKit Review Bot
Comment 9 2012-06-11 19:22:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.