[CSS3 Backgrounds and Borders] Protect box-decoration-break behind a feature flag. https://bugs.webkit.org/show_bug.cgi?id=88804

Reviewed by Tony Chang.

Protect box-decoration-break behind a feature flag enabled by default.

.:

* configure.ac:

Source/WebCore:

No new tests : no behavior change here.

* Configurations/FeatureDefines.xcconfig:
* GNUmakefile.am:
* css/CSSComputedStyleDeclaration.cpp:
(WebCore):
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
* css/CSSParser.cpp:
(WebCore::isValidKeywordPropertyAndValue):
(WebCore::isKeywordPropertyID):
(WebCore::CSSParser::parseValue):
* css/CSSPrimitiveValueMappings.h:
(WebCore):
* css/CSSProperty.cpp:
(WebCore::CSSProperty::isInheritedProperty):
* css/CSSValueKeywords.in:
* css/StyleBuilder.cpp:
(WebCore::StyleBuilder::StyleBuilder):
* rendering/style/RenderStyle.h:
* rendering/style/StyleBoxData.cpp:
(WebCore::StyleBoxData::StyleBoxData):
(WebCore::StyleBoxData::operator==):
* rendering/style/StyleBoxData.h:
(StyleBoxData):

Source/WebKit/chromium:

* features.gypi:

Source/WebKit/mac:

* Configurations/FeatureDefines.xcconfig:

Source/WebKit2:

* Configurations/FeatureDefines.xcconfig:

Tools:

* Scripts/webkitperl/FeatureList.pm:
* qmake/mkspecs/features/features.pri:

WebKitLibraries:

* win/tools/vsprops/FeatureDefines.vsprops:
* win/tools/vsprops/FeatureDefinesCairo.vsprops:


Canonical link: https://commits.webkit.org/106662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120029 268f45cc-cd09-0410-ab3c-d52691b4dbfc