Source/WebCore/rendering/style/StyleBoxData.h
@@ -58,7 +58,9 @@ public:
     bool hasAutoZIndex() const { return m_hasAutoZIndex; }
     
     EBoxSizing boxSizing() const { return static_cast<EBoxSizing>(m_boxSizing); }
+#if ENABLE(CSS_BOX_DECORATION_BREAK)
     EBoxDecorationBreak boxDecorationBreak() const { return static_cast<EBoxDecorationBreak>(m_boxDecorationBreak); }
+#endif
 
 private:
     friend class RenderStyle;
@@ -80,7 +82,9 @@ private:
     int m_zIndex;
     bool m_hasAutoZIndex : 1;
     unsigned m_boxSizing : 1; // EBoxSizing
+#if ENABLE(CSS_BOX_DECORATION_BREAK)
     unsigned m_boxDecorationBreak : 1; // EBoxDecorationBreak
+#endif
 };
 
 } // namespace WebCore
