Tools/Scripts/webkitperl/FeatureList.pm
@@ -49,6 +49,7 @@ my (
     $blobSupport,
     $channelMessagingSupport,
     $css3FlexboxSupport,
+    $cssBoxDecorationBreakSupport,
     $cssExclusionsSupport,
     $cssFiltersSupport,
     $cssImageResolutionSupport,
@@ -156,6 +157,9 @@ my @features = (
 
     { option => "css3-flexbox", desc => "Toggle CSS3 Flexbox support",
       define => "ENABLE_CSS3_FLEXBOX", default => 1, value => \$css3FlexboxSupport },
+
+    { option => "css-box-decoration-break", desc => "Toggle CSS box-decoration-break support",
+      define => "ENABLE_CSS_BOX_DECORATION_BREAK", default => 1, value => \$cssBoxDecorationBreakSupport },
 
     { option => "css-image-resolution", desc => "Toggle CSS image-resolution support",
       define => "ENABLE_CSS_IMAGE_RESOLUTION", default => 0, value => \$cssImageResolutionSupport },
